@@ -2,6 +2,7 @@ Revision history for Perl module Algorithm::LUHN
 
 1.02 2014-06-30 NEILB
     - Updated github repo URL after changing my github username
+    - Added Algorithm::Damm and Math::CheckDigits to SEE ALSO
 
 1.01 2014-06-30 NEILB
 
